@@ -212,6 +212,8 @@ x2goserver (4.1.0.4-0x2go1.2) UNRELEASED; urgency=medium
       input options string are possible and accepted, but actually discouraged
       and semantically redundant.
     - X2Go/Server/Agent/NX/Options.pm: whitespace-only in comment.
+    - X2Go/Server/Agent/NX/Options.pm: add and use an enum-like construct as
+      the internal mode selector for transforms.
   * debian/control:
     + Build-depend upon lsb-release for distro version detection.
   * debian/x2goserver.manpages:
